--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
 group   = com.gmail.gcolaianni5.jris
+
+gitPublishVersion = 2.1.3
+kotlinVersion = 1.3.61
+kordampPluginVersion = 0.32.0-SNAPSHOT
+reckonVersion = 0.12.0
