Move version management from settings.gradle.kts and buildSrc into gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,25 @@
 group   = com.gmail.gcolaianni5.jris
 
+# org.assertj:assertj-core // TODO update to 3.15.0
+assertjVersion=3.14.0
+# org.jetbrains.kotlinx:kotlinx-coroutines-core
+coroutinesVersion=1.3.3
+# org.ajoberstar.git-publish
 gitPublishVersion = 2.1.3
+# org.junit.jupiter:junit-jupiter-api // TODO update to 5.6.0
+junitJupiterVersion=5.5.2
+# org.amshove.kluent // TODO update to 1.60
+kluentVersion=1.59
 kotlinVersion = 1.3.61
 kordampPluginVersion = 0.32.0-SNAPSHOT
+# io.mockk:mockk
+mockkVersion=1.9.3
+# org.ajoberstar.reckon
 reckonVersion = 0.12.0
+# io.reactivex.rxjava2:rxjava // TODO update to 2.2.17
+rxjavaVersion=2.2.16
+# io.reactivex.rxjava2:rxkotlin
+rxkotlinVersion=2.4.0
+# org.spekframework.spek2:spek-dsl-jvm
+spekVersion=2.0.9
+
