--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group   = com.gmail.gcolaianni5.jris
 
-# org.assertj:assertj-core // TODO update to 3.15.0
-assertjVersion=3.14.0
+# org.assertj:assertj-core
+assertjVersion=3.15.0
 # org.jetbrains.kotlinx:kotlinx-coroutines-core
 coroutinesVersion=1.3.3
 # org.ajoberstar.git-publish
