--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ assertjVersion=3.15.0
 coroutinesVersion=1.3.3
 # org.ajoberstar.git-publish
 gitPublishVersion = 2.1.3
-# org.junit.jupiter:junit-jupiter-api // TODO update to 5.6.0
-junitJupiterVersion=5.5.2
+# org.junit.jupiter:junit-jupiter-api
+junitJupiterVersion=5.6.0
 # org.amshove.kluent // TODO update to 1.60
 kluentVersion=1.59
 kotlinVersion = 1.3.61
