--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ coroutinesVersion=1.3.3
 gitPublishVersion = 2.1.3
 # org.junit.jupiter:junit-jupiter-api
 junitJupiterVersion=5.6.0
-# org.amshove.kluent // TODO update to 1.60
-kluentVersion=1.59
+# org.amshove.kluent
+kluentVersion=1.60
 kotlinVersion = 1.3.61
 kordampPluginVersion = 0.32.0-SNAPSHOT
 # io.mockk:mockk
