--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,8 @@ kordampPluginVersion = 0.32.0-SNAPSHOT
 mockkVersion=1.9.3
 # org.ajoberstar.reckon
 reckonVersion = 0.12.0
-# io.reactivex.rxjava2:rxjava // TODO update to 2.2.17
-rxjavaVersion=2.2.16
+# io.reactivex.rxjava2:rxjava
+rxjavaVersion=2.2.17
 # io.reactivex.rxjava2:rxkotlin
 rxkotlinVersion=2.4.0
 # org.spekframework.spek2:spek-dsl-jvm
