--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ junitJupiterVersion=5.6.1
 # org.amshove.kluent
 kluentVersion=1.60
 kotlinVersion=1.3.70
-kordampPluginVersion=0.33.0-SNAPSHOT
+kordampPluginVersion=0.33.0
 # io.mockk:mockk
 mockkVersion=1.9.3
 # org.ajoberstar.reckon
