--- a/docs/guide/guide.gradle
+++ b/docs/guide/guide.gradle
@@ -28,3 +28,7 @@ afterEvaluate {
 
     gitPublishCommit.dependsOn project.tasks.findByName('createGuide')
 }
+
+dependencies {
+    testImplementation "io.reactivex.rxjava2:rxjava:2.2.21"
+}
