--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,15 @@
 [versions]
+asciidoctor = "3.3.2"
 assertj = "3.23.1"
 coroutines = "1.6.4"
 detekt = "1.21.0"
+gitPublish = "4.1.1"
 java = "11"
 junitJupiter = "5.9.1"
 kluent = "1.68"
 kotlin = "1.7.20"
 mockk = "1.13.2"
-reckon = "0.12.0"
+reckon = "0.16.1"
 rxjava = "2.2.21"
 spek = "2.0.19"
 testSets = "4.0.0"
@@ -29,6 +31,7 @@ spek-runner = { module = "org.spekframework.spek2:spek-runner-junit5", version.r
 
 plugin-detekt = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
 plugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+plugin-reckon = { module = "org.ajoberstar.reckon:reckon-gradle", version.ref = "reckon" }
 
 [bundles]
 kotlin = ["kotlin-stdlib", "kotlin-reflect", "coroutines-core"]
@@ -36,7 +39,10 @@ testDeps = ["junitJupiter-api", "spek-dsl", "mockk", "kluent", "assertj-core"]
 testEngines = ["junitJupiter-engine", "spek-runner"]
 
 [plugins]
+asciidoctorConvert = { id = "org.asciidoctor.jvm.convert", version.ref = "asciidoctor" }
+asciidoctorPdf = { id = "org.asciidoctor.jvm.pdf", version.ref = "asciidoctor" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
+gitPublish = { id = "org.ajoberstar.git-publish", version.ref = "gitPublish" }
 reckon = { id = "org.ajoberstar.reckon", version.ref = "reckon" }
 testSets = { id = "org.unbroken-dome.test-sets", version.ref = "testSets" }
 versions = { id = "com.github.ben-manes.versions", version.ref = "versions" }
