CodeQL: Switch from autobuild to explicit gradle check

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -37,6 +37,11 @@ jobs:
     - name: Autobuild
       uses: github/codeql-action/autobuild@v2
 
+    - name: Verify
+      run: ./gradlew check --no-daemon
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
       with:
