--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -22,11 +22,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'java' ]
+        language: [ 'java-kotlin' ]
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4
+
+    - uses: actions/setup-java@v1
+      with:
+        java-version: 17
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
