try to fix sonar setup

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,8 +67,11 @@ jobs:
           name: reports
           path: '**/build/reports'
 
-      - name: Run all tests with Gradle
-        run: ./gradlew check sonar --no-daemon
+      - name: Re-run all tests with Gradle
+        run: ./gradlew check
+
+      - name: Report analysis to sonar
+        run: ./gradlew sonar
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
