--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,5 @@ group=ch.difty.kris
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1G
 
 org.gradle.kotlin.dsl.allWarningsAsErrors=true
+
+systemProp.sonar.gradle.skipCompile=true
