--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ junitJupiter = "5.10.2"
 kluent = "1.73"
 kotest = "5.8.1"
 kotlin = "1.9.23"
+# See https://github.com/detekt/detekt/issues/6198
+detektKotlinVersion = "1.9.22"
 mockk = "1.13.10"
 nexusPublish = "1.3.0"
 rxjava = "2.2.21"
