--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,15 +44,11 @@ jobs:
           restore-keys: |
             gradle-cache-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
 
-      - uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: |
-            build
-            check
-            detekt
-            mergeDetektSarif
-            :gradle-plugins:buildPlugins
-            --continue
+      - name: Setup gradle
+        uses: gradle/actions/setup-gradle@v3
+
+      - name: Run build
+        run: ./gradlew build check detekt mergeDetektSarif :gradle-plugins:buildPlugins --continue
 
       - uses: github/codeql-action/upload-sarif@v3
         if: success() || failure()
@@ -75,3 +71,4 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
