chore: opt-in to parallel load of configuration cache

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 group=ch.difty.kris
 
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1G
+org.gradle.configuration-cache.parallel=true
 
 org.gradle.kotlin.dsl.allWarningsAsErrors=true
 
