--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ org.gradle.configuration-cache.parallel=true
 org.gradle.kotlin.dsl.allWarningsAsErrors=true
 
 systemProp.sonar.gradle.skipCompile=true
+
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2EnabledWithHelpers
