--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,4 @@ org.gradle.kotlin.dsl.allWarningsAsErrors=true
 
 systemProp.sonar.gradle.skipCompile=true
 
-org.jetbrains.dokka.experimental.gradle.pluginMode=V2EnabledWithHelpers
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
