--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,4 @@ org.gradle.kotlin.dsl.allWarningsAsErrors=true
 systemProp.sonar.gradle.skipCompile=true
 
 org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
