--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,8 @@
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": [
         "config:recommended",
-        ":semanticCommitTypeAll(chore)"
+        ":semanticCommitTypeAll(chore)",
+        "helpers:pinGitHubActionDigests"
     ],
     "rebaseWhen": "conflicted",
     "labels": [
