--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,11 @@
 group=ch.difty.kris
 
-org.gradle.jvmargs=-XX:MaxMetaspaceSize=1G
+kotlin.code.style=official
+
+org.gradle.caching=true
+org.gradle.configuration-cache=true
 org.gradle.configuration-cache.parallel=true
+org.gradle.jvmargs=-XX:MaxMetaspaceSize=1G
 
 org.gradle.kotlin.dsl.allWarningsAsErrors=true
 
