--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ kotlin = "2.2.20"
 # See https://github.com/detekt/detekt/issues/6198
 detektKotlinVersion = "1.9.22"
 mockk = "1.14.5"
+mavenPublish = "0l.24.0"
 nexusPublish = "2.0.0"
 rxjava = "2.2.21"
 sonarqube = "6.3.1.5724"
@@ -49,6 +50,7 @@ detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 gitPublish = { id = "org.ajoberstar.git-publish", version.ref = "gitPublish" }
 kotest = { id = "io.kotest", version.ref = "kotest" }
+mavenPublish = { id = "com.vanniktech.maven.publish", version.ref = "mavenPublish"}
 nexusPublish = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "nexusPublish" }
 powerAssert = { id = "org.jetbrains.kotlin.plugin.power-assert", version.ref = "kotlin" }
 sonarqube = { id = "org.sonarqube", version.ref = "sonarqube" }
